@@ -332,9 +332,9 @@ doc/meintro_fr.ps: doc/meintro_fr.me preconv
 	$(GROFF_V)$(MKDIR_P) `dirname $@` \
 	&& $(DOC_GROFF) -K utf8 -t -Tps -me -mfr $< >$@
 
-doc/ms.ps: $(doc_srcdir)/ms.ms tbl
+doc/ms.ps: $(doc_srcdir)/ms.ms eqn tbl
 	$(GROFF_V)$(MKDIR_P) `dirname $@` \
-	&& $(DOC_GROFF) -t -Tps -ms $(doc_srcdir)/ms.ms >$@
+	&& $(DOC_GROFF) -et -Tps -ms $(doc_srcdir)/ms.ms >$@
 
 doc/pic.ps: $(doc_srcdir)/pic.ms eqn pic tbl
 	$(GROFF_V)$(MKDIR_P) `dirname $@` \
